Fixed bug where you could not detonate or jumpback when holding shift

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ font-family: 'Metal Mania', cursive;
     top:5vh;
     height:90vh;
     width:75vw;
-    background: radial-gradient(farthest-side at center, transparent, rgba(0,0,0,.6) 70%, black 94% );
+    background: radial-gradient(farthest-side at center, transparent, rgba(0,0,0,.6) 70%, black 90% );
 }
 
 #intro-wrapper {
@@ -129,6 +129,7 @@ font-family: 'Metal Mania', cursive;
     left: 2.5vw;
     width: 75vw;
     height: 90vh;
+    opacity:90%;
     color:red;
 }
 #postgame-wrapper{
@@ -155,7 +156,7 @@ font-family: 'Metal Mania', cursive;
     justify-content: space-evenly;
     align-items: top;
     gap: space-around;
-    opacity:80%;
+    opacity:70%;
 }
 #scoreboard-sub{
 margin-bottom: 3vh;
